crates/escalier_parser/src/snapshots/escalier_parser__tests__destructuring-4.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let [a, b, ...rest] = letters;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 30,
                    },
                },
                span: 0..30,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 19,
                                },
                            },
                            span: 4..19,
                            kind: Array(
                                ArrayPat {
                                    elems: [
                                        Some(
                                            ArrayPatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                    },
                                                    span: 5..6,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "a",
                                                            mutable: false,
                                                            span: 5..6,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 5,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 6,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                        Some(
                                            ArrayPatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                    },
                                                    span: 8..9,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "b",
                                                            mutable: false,
                                                            span: 8..9,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 8,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 9,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                        Some(
                                            ArrayPatElem {
                                                pattern: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 11,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 18,
                                                        },
                                                    },
                                                    span: 11..18,
                                                    kind: Rest(
                                                        RestPat {
                                                            arg: Pattern {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 14,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 18,
                                                                    },
                                                                },
                                                                span: 14..18,
                                                                kind: Ident(
                                                                    BindingIdent {
                                                                        name: "rest",
                                                                        mutable: false,
                                                                        span: 14..18,
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 14,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 18,
                                                                            },
                                                                        },
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                init: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 22,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 29,
                                    },
                                },
                                span: 22..29,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 22,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 29,
                                            },
                                        },
                                        span: 22..29,
                                        name: "letters",
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
